minibasic/parser.output
State 36 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: stmt_list

    2 stmt_list: %empty
    3          | stmt_list stmt

    4 stmt: "let" T_id '=' expr
    5     | "print" expr
    6     | "for" expr "do" stmt
    7     | "if" expr "then" stmt
    8     | "if" expr "then" stmt "else" stmt
    9     | "begin" stmt_list "end"

   10 expr: T_id
   11     | T_const
   12     | '(' expr ')'
   13     | expr '+' expr
   14     | expr '-' expr
   15     | expr '*' expr
   16     | expr '/' expr
   17     | expr '%' expr


Terminals, with rules where they appear

$end (0) 0
'%' (37) 17
'(' (40) 12
')' (41) 12
'*' (42) 15
'+' (43) 13
'-' (45) 14
'/' (47) 16
'=' (61) 4
error (256)
"for" (258) 6
"print" (259) 5
"let" (260) 4
"if" (261) 7 8
"then" (262) 7 8
"else" (263) 8
"do" (264) 6
"begin" (265) 9
"end" (266) 9
T_id (267) 4 10
T_const (268) 11


Nonterminals, with rules where they appear

$accept (22)
    on left: 0
program (23)
    on left: 1, on right: 0
stmt_list (24)
    on left: 2 3, on right: 1 3 9
stmt (25)
    on left: 4 5 6 7 8 9, on right: 3 6 7 8
expr (26)
    on left: 10 11 12 13 14 15 16 17, on right: 4 5 6 7 8 12 13 14
    15 16 17


State 0

    0 $accept: . program $end

    $default  reduce using rule 2 (stmt_list)

    program    go to state 1
    stmt_list  go to state 2


State 1

    0 $accept: program . $end

    $end  shift, and go to state 3


State 2

    1 program: stmt_list .
    3 stmt_list: stmt_list . stmt

    "for"    shift, and go to state 4
    "print"  shift, and go to state 5
    "let"    shift, and go to state 6
    "if"     shift, and go to state 7
    "begin"  shift, and go to state 8

    $default  reduce using rule 1 (program)

    stmt  go to state 9


State 3

    0 $accept: program $end .

    $default  accept


State 4

    6 stmt: "for" . expr "do" stmt

    T_id     shift, and go to state 10
    T_const  shift, and go to state 11
    '('      shift, and go to state 12

    expr  go to state 13


State 5

    5 stmt: "print" . expr

    T_id     shift, and go to state 10
    T_const  shift, and go to state 11
    '('      shift, and go to state 12

    expr  go to state 14


State 6

    4 stmt: "let" . T_id '=' expr

    T_id  shift, and go to state 15


State 7

    7 stmt: "if" . expr "then" stmt
    8     | "if" . expr "then" stmt "else" stmt

    T_id     shift, and go to state 10
    T_const  shift, and go to state 11
    '('      shift, and go to state 12

    expr  go to state 16


State 8

    9 stmt: "begin" . stmt_list "end"

    $default  reduce using rule 2 (stmt_list)

    stmt_list  go to state 17


State 9

    3 stmt_list: stmt_list stmt .

    $default  reduce using rule 3 (stmt_list)


State 10

   10 expr: T_id .

    $default  reduce using rule 10 (expr)


State 11

   11 expr: T_const .

    $default  reduce using rule 11 (expr)


State 12

   12 expr: '(' . expr ')'

    T_id     shift, and go to state 10
    T_const  shift, and go to state 11
    '('      shift, and go to state 12

    expr  go to state 18


State 13

    6 stmt: "for" expr . "do" stmt
   13 expr: expr . '+' expr
   14     | expr . '-' expr
   15     | expr . '*' expr
   16     | expr . '/' expr
   17     | expr . '%' expr

    "do"  shift, and go to state 19
    '+'   shift, and go to state 20
    '-'   shift, and go to state 21
    '*'   shift, and go to state 22
    '/'   shift, and go to state 23
    '%'   shift, and go to state 24


State 14

    5 stmt: "print" expr .
   13 expr: expr . '+' expr
   14     | expr . '-' expr
   15     | expr . '*' expr
   16     | expr . '/' expr
   17     | expr . '%' expr

    '+'  shift, and go to state 20
    '-'  shift, and go to state 21
    '*'  shift, and go to state 22
    '/'  shift, and go to state 23
    '%'  shift, and go to state 24

    $default  reduce using rule 5 (stmt)


State 15

    4 stmt: "let" T_id . '=' expr

    '='  shift, and go to state 25


State 16

    7 stmt: "if" expr . "then" stmt
    8     | "if" expr . "then" stmt "else" stmt
   13 expr: expr . '+' expr
   14     | expr . '-' expr
   15     | expr . '*' expr
   16     | expr . '/' expr
   17     | expr . '%' expr

    "then"  shift, and go to state 26
    '+'     shift, and go to state 20
    '-'     shift, and go to state 21
    '*'     shift, and go to state 22
    '/'     shift, and go to state 23
    '%'     shift, and go to state 24


State 17

    3 stmt_list: stmt_list . stmt
    9 stmt: "begin" stmt_list . "end"

    "for"    shift, and go to state 4
    "print"  shift, and go to state 5
    "let"    shift, and go to state 6
    "if"     shift, and go to state 7
    "begin"  shift, and go to state 8
    "end"    shift, and go to state 27

    stmt  go to state 9


State 18

   12 expr: '(' expr . ')'
   13     | expr . '+' expr
   14     | expr . '-' expr
   15     | expr . '*' expr
   16     | expr . '/' expr
   17     | expr . '%' expr

    '+'  shift, and go to state 20
    '-'  shift, and go to state 21
    '*'  shift, and go to state 22
    '/'  shift, and go to state 23
    '%'  shift, and go to state 24
    ')'  shift, and go to state 28


State 19

    6 stmt: "for" expr "do" . stmt

    "for"    shift, and go to state 4
    "print"  shift, and go to state 5
    "let"    shift, and go to state 6
    "if"     shift, and go to state 7
    "begin"  shift, and go to state 8

    stmt  go to state 29


State 20

   13 expr: expr '+' . expr

    T_id     shift, and go to state 10
    T_const  shift, and go to state 11
    '('      shift, and go to state 12

    expr  go to state 30


State 21

   14 expr: expr '-' . expr

    T_id     shift, and go to state 10
    T_const  shift, and go to state 11
    '('      shift, and go to state 12

    expr  go to state 31


State 22

   15 expr: expr '*' . expr

    T_id     shift, and go to state 10
    T_const  shift, and go to state 11
    '('      shift, and go to state 12

    expr  go to state 32


State 23

   16 expr: expr '/' . expr

    T_id     shift, and go to state 10
    T_const  shift, and go to state 11
    '('      shift, and go to state 12

    expr  go to state 33


State 24

   17 expr: expr '%' . expr

    T_id     shift, and go to state 10
    T_const  shift, and go to state 11
    '('      shift, and go to state 12

    expr  go to state 34


State 25

    4 stmt: "let" T_id '=' . expr

    T_id     shift, and go to state 10
    T_const  shift, and go to state 11
    '('      shift, and go to state 12

    expr  go to state 35


State 26

    7 stmt: "if" expr "then" . stmt
    8     | "if" expr "then" . stmt "else" stmt

    "for"    shift, and go to state 4
    "print"  shift, and go to state 5
    "let"    shift, and go to state 6
    "if"     shift, and go to state 7
    "begin"  shift, and go to state 8

    stmt  go to state 36


State 27

    9 stmt: "begin" stmt_list "end" .

    $default  reduce using rule 9 (stmt)


State 28

   12 expr: '(' expr ')' .

    $default  reduce using rule 12 (expr)


State 29

    6 stmt: "for" expr "do" stmt .

    $default  reduce using rule 6 (stmt)


State 30

   13 expr: expr . '+' expr
   13     | expr '+' expr .
   14     | expr . '-' expr
   15     | expr . '*' expr
   16     | expr . '/' expr
   17     | expr . '%' expr

    '*'  shift, and go to state 22
    '/'  shift, and go to state 23
    '%'  shift, and go to state 24

    $default  reduce using rule 13 (expr)


State 31

   13 expr: expr . '+' expr
   14     | expr . '-' expr
   14     | expr '-' expr .
   15     | expr . '*' expr
   16     | expr . '/' expr
   17     | expr . '%' expr

    '*'  shift, and go to state 22
    '/'  shift, and go to state 23
    '%'  shift, and go to state 24

    $default  reduce using rule 14 (expr)


State 32

   13 expr: expr . '+' expr
   14     | expr . '-' expr
   15     | expr . '*' expr
   15     | expr '*' expr .
   16     | expr . '/' expr
   17     | expr . '%' expr

    $default  reduce using rule 15 (expr)


State 33

   13 expr: expr . '+' expr
   14     | expr . '-' expr
   15     | expr . '*' expr
   16     | expr . '/' expr
   16     | expr '/' expr .
   17     | expr . '%' expr

    $default  reduce using rule 16 (expr)


State 34

   13 expr: expr . '+' expr
   14     | expr . '-' expr
   15     | expr . '*' expr
   16     | expr . '/' expr
   17     | expr . '%' expr
   17     | expr '%' expr .

    $default  reduce using rule 17 (expr)


State 35

    4 stmt: "let" T_id '=' expr .
   13 expr: expr . '+' expr
   14     | expr . '-' expr
   15     | expr . '*' expr
   16     | expr . '/' expr
   17     | expr . '%' expr

    '+'  shift, and go to state 20
    '-'  shift, and go to state 21
    '*'  shift, and go to state 22
    '/'  shift, and go to state 23
    '%'  shift, and go to state 24

    $default  reduce using rule 4 (stmt)


State 36

    7 stmt: "if" expr "then" stmt .
    8     | "if" expr "then" stmt . "else" stmt

    "else"  shift, and go to state 37

    "else"    [reduce using rule 7 (stmt)]
    $default  reduce using rule 7 (stmt)


State 37

    8 stmt: "if" expr "then" stmt "else" . stmt

    "for"    shift, and go to state 4
    "print"  shift, and go to state 5
    "let"    shift, and go to state 6
    "if"     shift, and go to state 7
    "begin"  shift, and go to state 8

    stmt  go to state 38


State 38

    8 stmt: "if" expr "then" stmt "else" stmt .

    $default  reduce using rule 8 (stmt)
